force-app/main/default/objects/FEC_Routing_Action__c/FEC_Routing_Action__c.object-meta.xml
<CustomObject>
    <description>Là bảng dữ liệu chứa thông tin các Routing Action người dùng có thể thực hiện trên giao diện Case, ví dụ như Transfer, Route to, Resolved, ...</description>
    <label>Routing Action</label>
    <nameField>
        <label>Routing Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Action</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>