force-app/main/default/objects/FEC_Routing_Action__c/fields/FEC_Routing_Action_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Routing_Action_ID__c</fullName>
    <externalId>true</externalId>
    <label>Routing Action ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>