force-app/main/default/objects/FEC_Routing_Action__c/fields/FEC_Routing_Action_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Routing_Action_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routing Action Status</label>
    <type>Checkbox</type>
</CustomField>