force-app/main/default/objects/FEC_Routing_Action__c/fields/FEC_Routing_Action_Vietnamese_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Routing_Action_Vietnamese_Name__c</fullName>
    <description>Tên tiếng Việt của Routing Action</description>
    <label>Routing Action Vietnamese Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>